feat: enhance CORS configuration with additional headers and response filter