@@ -1,12 +1,20 @@
 package com.securemarts.config;
 
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.OncePerRequestFilter;
 
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
@@ -20,9 +28,11 @@ public class CorsConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(parseOrigins(allowedOriginsConfig));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        List<String> origins = parseOrigins(allowedOriginsConfig);
+        config.setAllowedOrigins(origins);
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With", "Origin", "Cache-Control"));
+        config.setExposedHeaders(List.of("Authorization", "Content-Type"));
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -30,9 +40,40 @@ public class CorsConfig {
         return source;
     }
 
+    /**
+     * Ensures CORS headers are on every response (including 401/403). Runs early so error responses still have CORS.
+     */
+    @Bean
+    @Order(Ordered.HIGHEST_PRECEDENCE)
+    public OncePerRequestFilter corsResponseHeadersFilter() {
+        return new OncePerRequestFilter() {
+            @Override
+            protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+                String origin = request.getHeader("Origin");
+                List<String> allowed = parseOrigins(allowedOriginsConfig);
+                if (origin != null && !origin.isBlank() && (allowed.isEmpty() || allowed.stream().anyMatch(o -> origin.equals(o) || originMatches(o, origin)))) {
+                    response.setHeader("Access-Control-Allow-Origin", origin);
+                    response.setHeader("Access-Control-Allow-Credentials", "true");
+                    response.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, PATCH, DELETE, OPTIONS, HEAD");
+                    response.setHeader("Access-Control-Allow-Headers", "Authorization, Content-Type, Accept, X-Requested-With, Origin, Cache-Control");
+                    response.setHeader("Access-Control-Max-Age", "3600");
+                }
+                filterChain.doFilter(request, response);
+            }
+
+            private boolean originMatches(String allowed, String origin) {
+                if (allowed.contains("*")) {
+                    String pattern = allowed.replace(".", "\\.").replace("*", ".*");
+                    return origin.matches(pattern);
+                }
+                return allowed.equals(origin);
+            }
+        };
+    }
+
     private static List<String> parseOrigins(String value) {
         if (value == null || value.isBlank()) {
-            return List.of("http://localhost:3000", "http://localhost:5173");
+            return List.of("http://localhost:3000", "http://localhost:5173", "http://127.0.0.1:3000", "http://127.0.0.1:5173");
         }
         return Arrays.stream(value.split(","))
                 .map(String::trim)
